Migrate networking to Netty 4 and restore server logic
Refactors the networking stack from Netty 3 to Netty 4 (`io.netty:netty-all:4.1.86.Final`).
- Migrates `GameServerTCP`, `IndexServerTCP`, and `STUNServerUDP` to use Netty 4 APIs (`ServerBootstrap`, `NioEventLoopGroup`, `ChannelInitializer`).
- Updates `STUNServerUDP` to process `DatagramPacket` directly, ensuring correct sender address retrieval (replacing incompatible `StringDecoder` pipeline).
- Restores business logic (login, game save, room management) in `GameServerTCP` that was temporarily lost during structural migration.
- Updates `.gitignore` to exclude build artifacts (`.gradle/`, `build/`).
- `IndexClientTCP` updated to use `NioEventLoopGroup` and `Bootstrap`.
- Verified compilation with Gradle (ignoring diff size warnings).