@@ -9,33 +9,29 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 
 import com.bobsgame.ServerMain;
-import org.jboss.netty.bootstrap.ClientBootstrap;
-import org.jboss.netty.channel.AdaptiveReceiveBufferSizePredictorFactory;
-import org.jboss.netty.channel.Channel;
-import org.jboss.netty.channel.ChannelEvent;
-import org.jboss.netty.channel.ChannelFuture;
-import org.jboss.netty.channel.ChannelHandlerContext;
-import org.jboss.netty.channel.ChannelPipeline;
-import org.jboss.netty.channel.ChannelPipelineFactory;
-import org.jboss.netty.channel.ChannelStateEvent;
-import org.jboss.netty.channel.Channels;
-import org.jboss.netty.channel.ExceptionEvent;
-import org.jboss.netty.channel.MessageEvent;
-import org.jboss.netty.channel.SimpleChannelUpstreamHandler;
-import org.jboss.netty.channel.socket.nio.NioClientSocketChannelFactory;
-import org.jboss.netty.handler.codec.frame.DelimiterBasedFrameDecoder;
-import org.jboss.netty.handler.codec.frame.Delimiters;
-import org.jboss.netty.handler.codec.string.StringDecoder;
-import org.jboss.netty.handler.codec.string.StringEncoder;
-import org.jboss.netty.handler.timeout.ReadTimeoutException;
-import org.jboss.netty.util.HashedWheelTimer;
-import org.jboss.netty.util.Timeout;
-import org.jboss.netty.util.Timer;
-import org.jboss.netty.util.TimerTask;
+import io.netty.bootstrap.Bootstrap;
+import io.netty.channel.Channel;
+import io.netty.channel.ChannelFuture;
+import io.netty.channel.ChannelHandlerContext;
+import io.netty.channel.ChannelInboundHandlerAdapter;
+import io.netty.channel.ChannelInitializer;
+import io.netty.channel.ChannelOption;
+import io.netty.channel.ChannelPipeline;
+import io.netty.channel.EventLoopGroup;
+import io.netty.channel.nio.NioEventLoopGroup;
+import io.netty.channel.socket.SocketChannel;
+import io.netty.channel.socket.nio.NioSocketChannel;
+import io.netty.handler.codec.DelimiterBasedFrameDecoder;
+import io.netty.handler.codec.Delimiters;
+import io.netty.handler.codec.string.StringDecoder;
+import io.netty.handler.codec.string.StringEncoder;
+import io.netty.handler.timeout.ReadTimeoutException;
+import io.netty.util.HashedWheelTimer;
+import io.netty.util.Timeout;
+import io.netty.util.Timer;
+import io.netty.util.TimerTask;
 
 import org.slf4j.LoggerFactory;
-
-
 import ch.qos.logback.classic.Logger;
 
 import com.bobsgame.net.BobNet;
@@ -43,17 +39,15 @@ import com.bobsgame.net.BobsGameClient;
 import com.bobsgame.net.BobsGameRoom;
 import com.bobsgame.net.PrivateCredentials;
 
-
 //=========================================================================================================================
 public class IndexClientTCP
 {//=========================================================================================================================
 
-
-
-	ClientBootstrap clientBootstrap;
+	Bootstrap clientBootstrap;
 	ChannelFuture channelFuture;
 	Channel channel;
 	Timer timer;
+    EventLoopGroup workerGroup;
 
 	int serverID = -1;
 
@@ -63,48 +57,33 @@ public class IndexClientTCP
 	public IndexClientTCP()
 	{//=========================================================================================================================
 
-
 		//Initialize the timer that schedules subsequent reconnection attempts.
 		timer = new HashedWheelTimer();
 
+        workerGroup = new NioEventLoopGroup();
+
 		//Configure the client.
-		clientBootstrap = new ClientBootstrap(new NioClientSocketChannelFactory(Executors.newCachedThreadPool(), Executors.newCachedThreadPool()));
+		clientBootstrap = new Bootstrap();
+        clientBootstrap.group(workerGroup);
+        clientBootstrap.channel(NioSocketChannel.class);
 
+        clientBootstrap.option(ChannelOption.SO_KEEPALIVE, true);
+        clientBootstrap.option(ChannelOption.TCP_NODELAY, true);
+        clientBootstrap.option(ChannelOption.SO_SNDBUF, 65536);
+        clientBootstrap.option(ChannelOption.SO_RCVBUF, 65536);
 
-		//Configure the pipeline factory.
-		clientBootstrap.setPipelineFactory
-		(
-			new ChannelPipelineFactory()
-			{
-				//===============================================================================================
-				public ChannelPipeline getPipeline() throws Exception
-				{//===============================================================================================
-					//Create a default pipeline implementation.
-					ChannelPipeline pipeline = Channels.pipeline();
+        clientBootstrap.handler(new ChannelInitializer<SocketChannel>() {
+            @Override
+            public void initChannel(SocketChannel ch) throws Exception {
+                ChannelPipeline pipeline = ch.pipeline();
 
-					//Add the text line codec combination first,
-					pipeline.addLast("framer", new DelimiterBasedFrameDecoder(65536, Delimiters.lineDelimiter()));
-					pipeline.addLast("decoder", new StringDecoder());
-					pipeline.addLast("encoder", new StringEncoder());
+                pipeline.addLast("framer", new DelimiterBasedFrameDecoder(65536, Delimiters.lineDelimiter()));
+                pipeline.addLast("decoder", new StringDecoder());
+                pipeline.addLast("encoder", new StringEncoder());
 
-
-
-					//and then business logic.
-					pipeline.addLast("handler", new IndexClientHandler());
-
-					return pipeline;
-				}
-			}
-		);
-
-
-		clientBootstrap.setOption("sendBufferSize", 65536);
-		clientBootstrap.setOption("receiveBufferSize", 65536);
-		clientBootstrap.setOption("receiveBufferSizePredictorFactory", new AdaptiveReceiveBufferSizePredictorFactory());
-
-		clientBootstrap.setOption("tcpNoDelay", true);
-		clientBootstrap.setOption("keepAlive", true);
-
+                pipeline.addLast("handler", new IndexClientHandler());
+            }
+        });
 
 		int serverPort = BobNet.INDEXServerTCPPort;
 		String serverAddress = ServerMain.INDEXServerAddress;
@@ -114,21 +93,15 @@ public class IndexClientTCP
 			serverAddress = "127.0.0.1";
 		}
 
-		clientBootstrap.setOption("remoteAddress", new InetSocketAddress(serverAddress, serverPort));
+		// clientBootstrap.setOption("remoteAddress", new InetSocketAddress(serverAddress, serverPort));
+        // In Netty 4, remoteAddress is set during connect()
 
-
-
-
-		connectToServer();
-
-
+		connectToServer(serverAddress, serverPort);
 	}
 
 	//===============================================================================================
-	public class IndexClientHandler extends SimpleChannelUpstreamHandler
+	public class IndexClientHandler extends ChannelInboundHandlerAdapter
 	{//===============================================================================================
-
-
 
 		//===============================================================================================
 		public IndexClientHandler()
@@ -138,129 +111,102 @@ public class IndexClientTCP
 
 		//===============================================================================================
 		@Override
-		public void handleUpstream(ChannelHandlerContext ctx, ChannelEvent e) throws Exception
+		public void channelInactive(ChannelHandlerContext ctx) throws Exception
 		{//===============================================================================================
-			if (e instanceof ChannelStateEvent)
-			{
-				if(BobNet.debugMode)log.debug("handleUpstream: "+e.toString());
-			}
-			super.handleUpstream(ctx, e);
-		}
-
-
-		//===============================================================================================
-		@Override
-		public void channelDisconnected(ChannelHandlerContext ctx, ChannelStateEvent e)
-		{//===============================================================================================
-			log.warn("channelDisconnected to INDEX: ChannelID: "+e.getChannel().getId());
+			log.warn("channelDisconnected to INDEX: ChannelID: "+ctx.channel().id());
 
 			setConnectedToServer_S(false);
 
 			channel = null;
 
+            final int RECONNECT_DELAY = 1;//seconds
+
+            log.warn("channelClosed to INDEX - Sleeping for " + RECONNECT_DELAY + " seconds: ChannelID: "+ctx.channel().id());
+
+            timer.newTimeout(new TimerTask()
+            {
+                public void run(Timeout timeout) throws Exception
+                {
+                    log.warn("channelClosed TimerTask - Reconnecting to INDEX");
+
+                    String serverAddress = ServerMain.INDEXServerAddress;
+                    if(new File("/localServer").exists()) serverAddress = "127.0.0.1";
+                    connectToServer(serverAddress, BobNet.INDEXServerTCPPort);
+                }
+            }, RECONNECT_DELAY, TimeUnit.SECONDS);
+
+            super.channelInactive(ctx);
 		}
+
 		//===============================================================================================
 		@Override
-		public void channelClosed(ChannelHandlerContext ctx, ChannelStateEvent e)
+		public void channelActive(ChannelHandlerContext ctx) throws Exception
 		{//===============================================================================================
+			log.info("channelConnected to INDEX: ChannelID: "+ctx.channel().id());
 
-			final int RECONNECT_DELAY = 1;//seconds
-
-			setConnectedToServer_S(false);
-			channel = null;
-
-
-			log.warn("channelClosed to INDEX - Sleeping for " + RECONNECT_DELAY + " seconds: ChannelID: "+e.getChannel().getId());
-
-
-			timer.newTimeout(new TimerTask()
-			{
-				public void run(Timeout timeout) throws Exception
-				{
-					log.warn("channelClosed TimerTask - Reconnecting to INDEX");
-
-					clientBootstrap.connect();
-
-				}
-			}, RECONNECT_DELAY, TimeUnit.SECONDS);
-		}
-		//===============================================================================================
-		@Override
-		public void channelConnected(ChannelHandlerContext ctx, ChannelStateEvent e)
-		{//===============================================================================================
-
-			log.info("channelConnected to INDEX: ChannelID: "+e.getChannel().getId());
-
-
-			channel = channelFuture.getChannel();
+			channel = ctx.channel();
 
 			setConnectedToServer_S(true);
 
 			send_INDEX_Register_Server_Request();
 
+            super.channelActive(ctx);
 		}
+
 		//===============================================================================================
 		@Override
-		public void exceptionCaught(ChannelHandlerContext ctx, ExceptionEvent e)
+		public void exceptionCaught(ChannelHandlerContext ctx, Throwable cause)
 		{//===============================================================================================
-			Throwable cause = e.getCause();
 			if(cause instanceof ConnectException)
 			{
-				log.error("Exception caught connecting to INDEX - ConnectException: "+e.getCause().getMessage());
+				log.error("Exception caught connecting to INDEX - ConnectException: "+cause.getMessage());
 			}
 			else
 			if(cause instanceof ReadTimeoutException)
 			{
-				log.error("Exception caught connecting to INDEX - ReadTimeoutException: "+e.getCause().getMessage());
+				log.error("Exception caught connecting to INDEX - ReadTimeoutException: "+cause.getMessage());
 			}
 			else
 			{
-				log.error("Unexpected Exception caught connecting to INDEX: "+e.getCause().getMessage());
+				log.error("Unexpected Exception caught connecting to INDEX: "+cause.getMessage());
 				cause.printStackTrace();
 			}
 
-			ctx.getChannel().close();
-			e.getChannel().close();
+			ctx.close();
 		}
-
-
 
 		//===============================================================================================
 		@Override
-		public void messageReceived(ChannelHandlerContext ctx, MessageEvent e)
+		public void channelRead(ChannelHandlerContext ctx, Object msg)
 		{//===============================================================================================
 
-			String s = (String) e.getMessage();
-
-
+			String s = (String) msg;
 
 			if(s.startsWith("ping"))
 			{
 				//log.debug("INDEX: ping");
-				write(e.getChannel(),"pong"+BobNet.endline);
+				write(ctx.channel(),"pong"+BobNet.endline);
 				return;
 			}
 			else if(s.startsWith("pong")){}
-			else if(BobNet.debugMode)log.info("FROM INDEX: cID:"+e.getChannel().getId()+" | "+s);
+			else if(BobNet.debugMode)log.info("FROM INDEX: cID:"+ctx.channel().id()+" | "+s);
 
-			if(s.startsWith(BobNet.Server_Register_Server_With_INDEX_Response)){incoming_Server_Registered_With_INDEX_Response(e);return;}
+			if(s.startsWith(BobNet.Server_Register_Server_With_INDEX_Response)){incoming_Server_Registered_With_INDEX_Response(s);return;}
 
-			if(s.startsWith(BobNet.Server_Tell_All_FacebookIDs_That_UserID_Is_Online)){incoming_Server_Tell_All_FacebookIDs_That_UserID_Is_Online(e);return;}
-			if(s.startsWith(BobNet.Server_Tell_All_UserNames_That_UserID_Is_Online)){incoming_Server_Tell_All_UserNames_That_UserID_Is_Online(e);return;}
-			if(s.startsWith(BobNet.Server_Tell_UserID_That_UserIDs_Are_Online)){incoming_Server_Tell_UserID_That_UserIDs_Are_Online(e);return;}
-			if(s.startsWith(BobNet.Server_UserID_Logged_On_Other_Server_So_Log_Them_Off)){incoming_Server_UserID_Logged_On_Other_Server_So_Log_Them_Off(e);return;}
-			if(s.startsWith(BobNet.Server_Tell_All_Users_Servers_Are_Shutting_Down)){incoming_Server_Tell_All_Users_Servers_Are_Shutting_Down(e);return;}
-			if(s.startsWith(BobNet.Server_Tell_All_Users_Servers_Have_Shut_Down)){incoming_Server_Tell_All_Users_Servers_Have_Shut_Down(e);return;}
+			if(s.startsWith(BobNet.Server_Tell_All_FacebookIDs_That_UserID_Is_Online)){incoming_Server_Tell_All_FacebookIDs_That_UserID_Is_Online(ctx, s);return;}
+			if(s.startsWith(BobNet.Server_Tell_All_UserNames_That_UserID_Is_Online)){incoming_Server_Tell_All_UserNames_That_UserID_Is_Online(ctx, s);return;}
+			if(s.startsWith(BobNet.Server_Tell_UserID_That_UserIDs_Are_Online)){incoming_Server_Tell_UserID_That_UserIDs_Are_Online(s);return;}
+			if(s.startsWith(BobNet.Server_UserID_Logged_On_Other_Server_So_Log_Them_Off)){incoming_Server_UserID_Logged_On_Other_Server_So_Log_Them_Off(s);return;}
+			if(s.startsWith(BobNet.Server_Tell_All_Users_Servers_Are_Shutting_Down)){incoming_Server_Tell_All_Users_Servers_Are_Shutting_Down(s);return;}
+			if(s.startsWith(BobNet.Server_Tell_All_Users_Servers_Have_Shut_Down)){incoming_Server_Tell_All_Users_Servers_Have_Shut_Down(s);return;}
 
-			if(s.startsWith(BobNet.Server_Bobs_Game_Hosting_Room_Update)){incoming_Server_Bobs_Game_Hosting_Room_Update(e);return;}
-			if(s.startsWith(BobNet.Server_Bobs_Game_Remove_Room)){incoming_Server_Bobs_Game_Remove_Room(e);return;}
-			if(s.startsWith(BobNet.Server_Send_Activity_Update_To_All_Clients)){incoming_Server_Send_Activity_Update_To_All_Clients(e);return;}
-			if(s.startsWith(BobNet.Server_Send_Chat_Message_To_All_Clients)){incoming_Server_Send_Chat_Message_To_All_Clients(e);return;}
+			if(s.startsWith(BobNet.Server_Bobs_Game_Hosting_Room_Update)){incoming_Server_Bobs_Game_Hosting_Room_Update(s);return;}
+			if(s.startsWith(BobNet.Server_Bobs_Game_Remove_Room)){incoming_Server_Bobs_Game_Remove_Room(s);return;}
+			if(s.startsWith(BobNet.Server_Send_Activity_Update_To_All_Clients)){incoming_Server_Send_Activity_Update_To_All_Clients(s);return;}
+			if(s.startsWith(BobNet.Server_Send_Chat_Message_To_All_Clients)){incoming_Server_Send_Chat_Message_To_All_Clients(s);return;}
 
 		}
-
 	}
-
 
 	//===============================================================================================
 	public ChannelFuture write(Channel c, String s)
@@ -274,40 +220,29 @@ public class IndexClientTCP
 
 		if(BobNet.debugMode)
 		{
-			log.debug("SEND INDEX: cID:"+c.getId()+" | "+s.substring(0,s.length()-2));
+			log.debug("SEND INDEX: cID:"+c.id()+" | "+s.substring(0,s.length()-2));
 		}
 
-
-		ChannelFuture cf = c.write(s);
+		ChannelFuture cf = c.writeAndFlush(s);
 
 		return cf;
 	}
-
 
 	//=========================================================================================================================
 	//CONNECT TO SERVER
 	//=========================================================================================================================
 
-
 	private boolean _connectedToServer = false;//synchronized
 
-
 	//=========================================================================================================================
-
-
-
-
-	//=========================================================================================================================
-	public void connectToServer()
+	public void connectToServer(String host, int port)
 	{//=========================================================================================================================
 
 		if(getConnectedToServer_S()==true)return;
 
-		//Initiate the first connection attempt - the rest is handled by
-		//ReconnectClientHandler.
-		channelFuture = clientBootstrap.connect();
+		//Initiate the first connection attempt
+		channelFuture = clientBootstrap.connect(host, port);
 	}
-
 
 	//=========================================================================================================================
 	synchronized public void setConnectedToServer_S(boolean b)
@@ -320,7 +255,6 @@ public class IndexClientTCP
 		return _connectedToServer;
 	}
 
-
 	//===============================================================================================
 	public void send_INDEX_Register_Server_Request()
 	{//===============================================================================================
@@ -332,15 +266,13 @@ public class IndexClientTCP
 
 	}
 
-
 	//===============================================================================================
-	public void incoming_Server_Registered_With_INDEX_Response(MessageEvent e)
+	public void incoming_Server_Registered_With_INDEX_Response(String s)
 	{//===============================================================================================
 
 		//set the serverID
 
 		//Server_Registered_With_INDEX_Response:message:serverID:
-		String s = (String) e.getMessage();
 		s = s.substring(s.indexOf(":")+1);//message:serverID:
 		String message = s.substring(0,s.indexOf(":"));
 		log.info(message);
@@ -348,10 +280,6 @@ public class IndexClientTCP
 		try{serverID = Integer.parseInt(s.substring(0,s.indexOf(":")));}catch(NumberFormatException ex){ex.printStackTrace();return;}
 
 	}
-
-
-
-
 
 	//===============================================================================================
 	public void send_INDEX_User_Logged_On_This_Server_Log_Them_Off_Other_Servers(long userID)
@@ -364,15 +292,12 @@ public class IndexClientTCP
 
 	}
 
-
 	//===============================================================================================
-	public void incoming_Server_UserID_Logged_On_Other_Server_So_Log_Them_Off(MessageEvent e)
+	public void incoming_Server_UserID_Logged_On_Other_Server_So_Log_Them_Off(String s)
 	{//===============================================================================================
-
 
 		//Server_UserID_Logged_On_Other_Server_So_Log_Them_Off:userID
 		int userID = -1;
-		String s = (String) e.getMessage();
 		s = s.substring(s.indexOf(":")+1);//userID
 		userID = -1;
 		try{userID = Integer.parseInt(s.substring(0,s.indexOf(":")));}catch(NumberFormatException ex){ex.printStackTrace();return;}
@@ -388,10 +313,8 @@ public class IndexClientTCP
 
 	}
 
-
-
 	//===============================================================================================
-	public void incoming_Server_Tell_All_Users_Servers_Are_Shutting_Down(MessageEvent e)
+	public void incoming_Server_Tell_All_Users_Servers_Are_Shutting_Down(String s)
 	{//===============================================================================================
 
 		//Server_Tell_All_Users_Servers_Are_Shutting_Down
@@ -399,32 +322,26 @@ public class IndexClientTCP
 		// send "server is shutting down" to all clients
 		//TODO: stop accepting logins
 
-
 		Iterator<BobsGameClient> i = ServerMain.gameServerTCP.clientsByUserID.values().iterator();
 		while(i.hasNext())
 		{
 			BobsGameClient check = i.next();
 			if(check!=null)
 			{
-				if(check.channel.isConnected())
+				if(check.channel.isActive())
 				{
 					ChannelFuture cf = write(check.channel,BobNet.Tell_Client_Servers_Are_Shutting_Down+BobNet.endline);
 				}
 			}
 		}
 
-
-
 	}
 
-
-
 	//===============================================================================================
-	public void incoming_Server_Tell_All_Users_Servers_Have_Shut_Down(MessageEvent e)
+	public void incoming_Server_Tell_All_Users_Servers_Have_Shut_Down(String s)
 	{//===============================================================================================
 
 		//Server_Tell_All_Users_Servers_Have_Shut_Down
-
 
 		// send "server has shut down" to all clients
 		// shut down instance.
@@ -435,14 +352,14 @@ public class IndexClientTCP
 			BobsGameClient check = i.next();
 			if(check!=null)
 			{
-				if(check.channel.isConnected())
+				if(check.channel.isActive())
 				{
 
 					ChannelFuture cf = write(check.channel,BobNet.Tell_Client_Servers_Have_Shut_Down+BobNet.endline);
 
 					try
 					{
-						cf.await();
+						cf.sync();
 					}
 					catch(InterruptedException ex)
 					{
@@ -452,12 +369,11 @@ public class IndexClientTCP
 			}
 		}
 
-
 		//TODO: probably have to make sure each channel gets closed, database connections closed, no halfway database writes or anything
 
 		try
 		{
-			Process p = Runtime.getRuntime().exec("reboot");
+			Process p = Runtime.getRuntime().exec(new String[]{"reboot"});
 		}
 		catch(IOException ex)
 		{
@@ -465,8 +381,6 @@ public class IndexClientTCP
 		}
 
 	}
-
-
 
 	//===============================================================================================
 	public void send_INDEX_Tell_All_Servers_To_Tell_UserNames_That_UserID_Is_Online(long userID, String userNameFriendsCSV)
@@ -476,7 +390,6 @@ public class IndexClientTCP
 		write(channel,BobNet.INDEX_Tell_All_Servers_To_Tell_UserNames_That_UserID_Is_Online+userID+",`"+userNameFriendsCSV+"`"+BobNet.endline);
 	}
 
-
 	//===============================================================================================
 	public void send_INDEX_Tell_All_Servers_To_Tell_FacebookIDs_That_UserID_Is_Online(long userID, String facebookFriendsCSV)
 	{//===============================================================================================
@@ -484,7 +397,6 @@ public class IndexClientTCP
 		//DONE: send this to INDEX SERVER
 		write(channel,BobNet.INDEX_Tell_All_Servers_To_Tell_FacebookIDs_That_UserID_Is_Online+userID+",`"+facebookFriendsCSV+"`"+BobNet.endline);
 	}
-
 
 	//===============================================================================================
 	//this event should only come from the index server
@@ -494,15 +406,13 @@ public class IndexClientTCP
 	//once we get that list, we check through our hashmap to see if any of those facebook IDs are on this server.
 	//we tell all those facebook friends that user came online
 	//then we make a new list of online friends by userID and send it back to the original server, which sends it back to the original client.
-	public void incoming_Server_Tell_All_FacebookIDs_That_UserID_Is_Online(MessageEvent e)
+	public void incoming_Server_Tell_All_FacebookIDs_That_UserID_Is_Online(ChannelHandlerContext ctx, String s)
 	{//===============================================================================================
-
 
 		int originatingServerID = -1;
 		int originatingUserID = -1;
 
 		//ServerNotifyFacebookFriendsUserIsOnline:serverID,userID,`facebookFriendsCSV,`
-		String s = (String) e.getMessage();
 		s = s.substring(s.indexOf(":")+1);//serverID,userID,`facebookFriendsCSV,`
 		try{originatingServerID = Integer.parseInt(s.substring(0,s.indexOf(',')));}catch(NumberFormatException ex){ex.printStackTrace();return;}
 		s = s.substring(s.indexOf(",")+1);//userID,`facebookFriendsCSV,`
@@ -513,10 +423,6 @@ public class IndexClientTCP
 		if(originatingUserID==-1)return;
 		if(originatingServerID==-1)return;
 		if(facebookIDsCSV.length()==0)return;
-
-
-
-
 
 		String onlineFriendUserIDsCSV = "";
 		String temp = ""+facebookIDsCSV;
@@ -548,25 +454,16 @@ public class IndexClientTCP
 			}
 		}
 
-
-
-
-
-
-
 		//now send the list of facebook friends USERIDs that were online on THIS server BACK to the originating server, which sends it BACK to the originating client.
-		write(e.getChannel(),BobNet.INDEX_Tell_ServerID_To_Tell_UserID_That_UserIDs_Are_Online+originatingServerID+","+originatingUserID+",`"+onlineFriendUserIDsCSV+"`"+BobNet.endline);
-
+		write(ctx.channel(),BobNet.INDEX_Tell_ServerID_To_Tell_UserID_That_UserIDs_Are_Online+originatingServerID+","+originatingUserID+",`"+onlineFriendUserIDsCSV+"`"+BobNet.endline);
 
 		//their client should ping the STUN server while our client does the same, hopefully matching each others request and getting each others IPs
 		//then they connect to each other simultaneously, punching a hole in firewall
-
 
 		//for each friend:
 
 		//tell our client through TCP to repeatedly ping us through STUN with udp on a unique port (STUN:userID,friendID)
 		//we record our clients outgoing UDP port and IP
-
 
 		//connect to all other servers, tell them:
 		//our userID, target friend userID
@@ -579,11 +476,10 @@ public class IndexClientTCP
 	//--------------------------------------------------
 	//this is sent back after we send a request to another server which looks up what facebook friends are connected to it, notifies them, and sends back the list to us
 	//so we should send that list to our client that originated the request.
-	public void incoming_Server_Tell_UserID_That_UserIDs_Are_Online(MessageEvent e)
+	public void incoming_Server_Tell_UserID_That_UserIDs_Are_Online(String s)
 	{//===============================================================================================
 
 		//ServerNotifyUserFriendsAreOnline:userID,`onlineFriendUserIDsCSV,`
-		String s = (String) e.getMessage();
 		s = s.substring(s.indexOf(":")+1);//userID,`onlineFriendUserIDsCSV,`
 		int userID = -1;
 		try{userID = Integer.parseInt(s.substring(0,s.indexOf(',')));}catch(NumberFormatException ex){ex.printStackTrace();return;}
@@ -608,18 +504,16 @@ public class IndexClientTCP
 		}
 	}
 
-
 	//===============================================================================================
 	//this event should only come from the index server
 	//--------------------------------------------------
-	public void incoming_Server_Tell_All_UserNames_That_UserID_Is_Online(MessageEvent e)
+	public void incoming_Server_Tell_All_UserNames_That_UserID_Is_Online(ChannelHandlerContext ctx, String s)
 	{//===============================================================================================
 
 		int originatingServerID = -1;
 		int originatingUserID = -1;
 
 		//Server_Tell_All_UserNames_That_UserID_Is_Online,userID,`userNamesCSV,`
-		String s = (String) e.getMessage();
 		s = s.substring(s.indexOf(":")+1);//serverID,userID,`userNamesCSV,`
 		try{originatingServerID = Integer.parseInt(s.substring(0,s.indexOf(',')));}catch(NumberFormatException ex){ex.printStackTrace();return;}
 		s = s.substring(s.indexOf(",")+1);//userID,`userNamesCSV,`
@@ -651,7 +545,6 @@ public class IndexClientTCP
 					long friendUserID = friendClient.userID;
 					onlineFriendUserIDsCSV = onlineFriendUserIDsCSV+type+":"+friendUserID+",";
 
-
 					//notify friend that user is online, they start pinging the stun server.
 					write(friendClient.channel,BobNet.Friend_Is_Online_Notification+type+":"+originatingUserID+BobNet.endline);
 				}
@@ -663,11 +556,9 @@ public class IndexClientTCP
 		}
 
 		//now send the list of facebook friends USERIDs that were online on THIS server BACK to the originating server, which sends it BACK to the originating client.
-		write(e.getChannel(),BobNet.INDEX_Tell_ServerID_To_Tell_UserID_That_UserIDs_Are_Online+originatingServerID+","+originatingUserID+",`"+onlineFriendUserIDsCSV+"`"+BobNet.endline);
+		write(ctx.channel(),BobNet.INDEX_Tell_ServerID_To_Tell_UserID_That_UserIDs_Are_Online+originatingServerID+","+originatingUserID+",`"+onlineFriendUserIDsCSV+"`"+BobNet.endline);
 
 	}
-
-
 
 	//===============================================================================================
 	public void send_INDEX_Tell_All_Servers_Bobs_Game_Hosting_Room_Update(String s, long userID)
@@ -679,8 +570,6 @@ public class IndexClientTCP
 		}
 	}
 
-
-	
 	//===============================================================================================
 	public void send_INDEX_Tell_All_Servers_Bobs_Game_Remove_Room(String s, long userID)
 	{//===============================================================================================
@@ -691,19 +580,16 @@ public class IndexClientTCP
 		}
 	}
 
-
-
 	//===============================================================================================
 	//this event should only come from the index server
 	//--------------------------------------------------
-	public void incoming_Server_Bobs_Game_Hosting_Room_Update(MessageEvent e)
+	public void incoming_Server_Bobs_Game_Hosting_Room_Update(String s)
 	{//===============================================================================================
 
 		int originatingServerID = -1;
 		int originatingUserID = -1;
 
 		//Server_Bobs_Game_Hosting_Room_Update:serverID,userID,roomString:
-		String s = (String) e.getMessage();
 		s = s.substring(s.indexOf(":")+1);//serverID,userID,
 		try{originatingServerID = Integer.parseInt(s.substring(0,s.indexOf(',')));}catch(NumberFormatException ex){ex.printStackTrace();return;}
 		s = s.substring(s.indexOf(",")+1);//userID,
@@ -723,18 +609,16 @@ public class IndexClientTCP
 		}
 	}
 
-
 	//===============================================================================================
 	//this event should only come from the index server
 	//--------------------------------------------------
-	public void incoming_Server_Bobs_Game_Remove_Room(MessageEvent e)
+	public void incoming_Server_Bobs_Game_Remove_Room(String s)
 	{//===============================================================================================
 
 		int originatingServerID = -1;
 		int originatingUserID = -1;
 
 		//Server_Bobs_Game_Remove_Room:serverID,userID,roomUUID:
-		String s = (String) e.getMessage();
 		s = s.substring(s.indexOf(":")+1);//serverID,userID,
 
 		try{originatingServerID = Integer.parseInt(s.substring(0,s.indexOf(',')));}catch(NumberFormatException ex){ex.printStackTrace();return;}
@@ -750,8 +634,6 @@ public class IndexClientTCP
 		ServerMain.gameServerTCP.removeRoom(roomUUID,originatingUserID);
 	}
 
-	
-	
 	//===============================================================================================
 	public void send_INDEX_Tell_All_Servers_To_Send_Activity_Update_To_All_Clients(String activityString)
 	{//===============================================================================================
@@ -765,12 +647,10 @@ public class IndexClientTCP
 	//===============================================================================================
 	//this event should only come from the index server
 	//--------------------------------------------------
-	public void incoming_Server_Send_Activity_Update_To_All_Clients(MessageEvent e)
+	public void incoming_Server_Send_Activity_Update_To_All_Clients(String s)
 	{//===============================================================================================
 		
-
 		//Server_Send_Activity_Update_To_All_Clients:activityString:
-		String s = (String) e.getMessage();
 		s = s.substring(s.indexOf(":")+1);
 		
 		String activityString = s.substring(0,s.indexOf(":END:"));
@@ -780,7 +660,6 @@ public class IndexClientTCP
 		ServerMain.gameServerTCP.sendActivityUpdateToAllClients(activityString);
 	}
 	
-
 	//===============================================================================================
 	public void send_INDEX_Tell_All_Servers_To_Send_Chat_Message_To_All_Clients(String s)
 	{//===============================================================================================
@@ -794,12 +673,10 @@ public class IndexClientTCP
 	//===============================================================================================
 	//this event should only come from the index server
 	//--------------------------------------------------
-	public void incoming_Server_Send_Chat_Message_To_All_Clients(MessageEvent e)
+	public void incoming_Server_Send_Chat_Message_To_All_Clients(String s)
 	{//===============================================================================================
 
-
 		//Server_Send_Chat_Message_To_All_Clients:activityString:
-		String s = (String) e.getMessage();
 		s = s.substring(s.indexOf(":")+1);
 
 		String chatMessage = s.substring(0,s.indexOf(":END:"));
@@ -808,8 +685,5 @@ public class IndexClientTCP
 
 		ServerMain.gameServerTCP.sendChatMessageToAllClients(chatMessage);
 	}
-	
-	
-	
 	
 }
